chore(footer): add legal link to main site for Impressum & Datenschutz compliance

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -46,7 +46,13 @@
     }
   },
   "footer": {
-    "signature": "Gebaut mit React, D3 und ☕️ von Amanullah Manssur."
+    "signature": "Gebaut mit React, D3 und ☕️ von Amanullah Manssur.",
+    "copyright": "© 2025 Amanullah Manssur",
+    "legal": {
+      "label": "Rechtliches:",
+      "link": "Impressum & Datenschutz",
+      "href": "https://amanssur.com/de/legal"
+    }
   },
   "dashboard": {
     "hero": {
