--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -45,6 +45,13 @@
       "de": "DE"
     }
   },
+  "notFound": {
+    "eyebrow": "Fehler 404",
+    "title": "Seite nicht gefunden",
+    "description": "Die gewünschte Seite wurde verschoben oder existiert nicht. Lass uns dich zurück zum bekannten Bereich führen.",
+    "cta": "Zurück zum Dashboard",
+    "secondary": "Zurück"
+  },
   "footer": {
     "signature": "Gebaut mit React, D3 und ☕️ von Amanullah Manssur.",
     "copyright": "© 2025 Amanullah Manssur",
@@ -52,6 +59,11 @@
       "label": "Rechtliches:",
       "link": "Impressum & Datenschutz",
       "href": "https://amanssur.com/de/legal"
+    },
+    "cta": {
+      "text": "Interessiert an meiner Arbeit?",
+      "link": "Kontaktiere mich hier",
+      "href": "https://amanssur.com/#contact"
     }
   },
   "dashboard": {
